# veriprojesi-bitmedi

./: CMakeLists.txt  main.cpp
araclar/: hatalar.h
veri/: Tablo.h  tablo.cpp  tablo_tanimlari.h  veritabani.cpp  veritabani.h
veri/verisiniflari/: idlisinif.cpp  idlisinif.h  insan.cpp  insan.h  lise.cpp  lise.h  sube.cpp  sube.h
